--- a/src/components/atoms/seo/seo.astro
+++ b/src/components/atoms/seo/seo.astro
@@ -1,5 +1,5 @@
 ---
-import { siteMetadata, siteUrl } from "constants/utils/site-config";
+import { siteMetadata, siteUrl } from "@/constants/utils/site-config";
 import Article from "./article.astro";
 import OpenGraph from "./open-graph.astro";
 import Profile from "./profile.astro";
