add setting and config

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,9 @@ import Document from "@/components/layouts/Document.astro";
 <Document>
   <Header />
   <main>
-    <h1>🧑‍🚀 Hello, Astronaut!</h1>
+    <h1 class="heading-h-1-regular text-wrap font-ddf md:heading-h-1-regular">
+      🧑‍🚀 Hello, Astronaut!
+    </h1>
     <p>
       Welcome to the official <a href="https://astro.build/">Astro</a> blog starter
       template. This template serves as a lightweight, minimally-styled starting
